
<resources>
    <string name="app_name">Baking App</string>
    <string name="servings">Servings:</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipe_id">recipeId</string>
    <string name="quantity_abbreviation">Qty.</string>
    <string name="recipes">All Recipes</string>
    <string name="details">Details</string>
    <string name="steps">Steps</string>
    <string name="recipeId">recipeID</string>
    <string name="bundle">bundle</string>
    <string name="string_previous">Previous</string>
    <string name="string_next">Next</string>
    <string name="string_pause">Pause</string>
    <string name="string_play">Play</string>
    <string name="cake_image">Cake Image</string>
</resources>
